--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>network.cow.spigot</groupId>
+            <artifactId>spigot-extensions</artifactId>
+            <version>1.0.0</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- Kotlin -->
         <dependency>
