--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
     </properties>
 
     <repositories>
+        <!-- needed for NPC library -->
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
         <repository>
             <id>cow-releases</id>
             <url>https://maven.cow.network/releases</url>
@@ -26,6 +31,11 @@
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>com.github.juliarn</groupId>
+            <artifactId>npc-lib</artifactId>
+            <version>2.5-RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>com.destroystokyo.paper</groupId>
             <artifactId>paper-api</artifactId>
