--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: Cowshed
 main: network.cow.mc.cowshed.CowshedPlugin
 api-version: 1.16
 version: 1.0.0
-depend: [Messages, SpigotExtensions]
+depend: [Indigo, Messages, SpigotExtensions]
 
 commands:
   sonic:
