--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: Cowshed
+name: cowshed
 main: network.cow.mc.cowshed.CowshedPlugin
 api-version: 1.16
 version: 1.0.0
@@ -12,3 +12,5 @@ commands:
   build:
     permission: cow.cowshed.build
   spawn: {}
+  npc: {}
+  emote: {}
